<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bag10"
    tools:context="com.example.user.rafiki.E7">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="155dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginEnd="137dp"
        android:layout_marginStart="119dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rafik" />

    <TextView
        android:id="@+id/sevill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:fontFamily="Raleway Bold"
        android:gravity="center"
        android:text="@string/surveillance"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/couplage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:fontFamily="Raleway Regular"
        android:gravity="center"
        android:text="@string/couplage"
        android:textAllCaps="false"
        android:textColor="@color/couple"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sevill" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="174dp"
        android:layout_height="177dp"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/couplage"
        app:srcCompat="@drawable/tshert" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="54dp"
        android:layout_height="55dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/couplage"
        app:srcCompat="@drawable/bluetooth" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="57dp"
        android:layout_height="45dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="420dp"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gadget" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="69dp"
        android:layout_height="106dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/couplage"
        app:srcCompat="@drawable/phone" />

    <TextView
        android:id="@+id/message_connexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="66dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="16dp"
        android:fontFamily="Raleway Medium"
        android:gravity="center"
        android:text="@string/votre_t_shirt"
        android:textColor="@color/text_alert"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginEnd="62dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="@string/ok"
        android:onClick="next"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_connexion" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="20dp"
        android:layout_height="17dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/alerts" />

</android.support.constraint.ConstraintLayout>
